MODSIDECAR-102: Fail chained handler if underlying routing entry handler fails (#189)
Co-authored-by: vgema <viktor_gema@epam.com>